# text-embeddings-decomposition

./: .gitignore  Makefile  README.md  pyproject.toml
notebooks/: classification.ipynb  decomposition_full_removal.ipynb  decomposition_pos_2_way_removal.ipynb  decomposition_pos_3_way_removal copy.ipynb  decomposition_pos_3_way_removal.ipynb  decomposition_pos_3_way_removal_contrast.ipynb  index.ipynb  prediction.ipynb
qr_decomposition/: async_typer.py  decomposition.py  device.py  distance.py  embedding.py  main.py  utils.py
qr_decomposition/sentiment/: dataset.py  inference.py  model.py  train.py
qr_decomposition/wikidata/: dataset.py  inference.py  model.py  train.py
test/: test_decomposition.py
